--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
-            <li class="advantages-item white-text advantages-item-smaller">
+            <li class="advantages-item colored-text advantages-item-smaller">
                 <h3 class="advantages-title">Настоящий городок</h3>
-                <p class="advatages-description white-text">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+                <p class="advatages-description colored-text">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="advantages-item wide-element">
               <div class="advantages-image1">
@@ -86,9 +86,9 @@
                 </span>
               </div>
             </li>
-            <li class="advantages-item white-text advantages-item-smaller">
+            <li class="advantages-item colored-text advantages-item-smaller">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
-              <p class="advatages-description white-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <p class="advatages-description colored-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
         </ul>
 
