Исправление цветов, повторяющихся элементов. Добавляет стили для форм

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
   <div class="nav-container">
     <ul class="navigation-list">
         <li class="navigation-item">
-            <a href="index.html" class="navigation-link ">Главная</a>
+            <a href="index.html" class="navigation-link">Главная</a>
         </li>
         <li class="navigation-item">
             <a href="#" class="navigation-link">О Седоне</a>
@@ -27,12 +27,12 @@
 
     <ul class="controls-list">
       <li class="controls-item">
-        <a class="controls-link controls-link-search" href="">
+        <a class="controls-link controls-link-search controls-icon" href="">
           <span class="visually-hidden">Поиск</span>
         </a>
       </li>
       <li class="controls-item">
-        <a class="controls-link controls-link-heart" href="">
+        <a class="controls-link controls-link-heart controls-icon" href="">
           <span class="visually-hidden">Избранное</span>
         </a>
       </li>
@@ -146,8 +146,8 @@
                       <span class="hotels-price">От 4000 ₽</span>
                     </div>
                     <div class="hotels-container">
-                      <a class="button" href="#">Подробнее</a>
-                      <button class="button-blue hotels-button" type="button">В избранное</button>
+                      <a class="product-button" href="#">Подробнее</a>
+                      <button class="hotels-button" type="button">В избранное</button>
                     </div>
                     <div class="hotels-container">
                       <span class="hotels-stars four-stars"></span>
@@ -164,8 +164,8 @@
                       <span class="hotels-price">От 5000 ₽</span>
                     </div>
                     <div class="hotels-container">
-                      <a class="button" href="#">Подробнее</a>
-                      <button class="button-blue hotels-button" type="button">В избранном</button>
+                      <a class="product-button" href="#">Подробнее</a>
+                      <button class="hotels-button favorites" type="button">В избранном</button>
                     </div>
                     <div class="hotels-container">
                       <span class="hotels-stars four-stars"></span>
@@ -182,8 +182,8 @@
                       <span class="hotels-price">От 2500 ₽</span>
                     </div>
                     <div class="hotels-container">
-                      <a class="button" href="#">Подробнее</a>
-                      <button class="button-blue hotels-button" type="button">В избранное</button>
+                      <a class="product-button" href="#">Подробнее</a>
+                      <button class="hotels-button" type="button">В избранное</button>
                     </div>
                     <div class="hotels-container">
                       <span class="hotels-stars four-stars"></span>
@@ -200,8 +200,8 @@
                       <span class="hotels-price">От 1500 ₽</span>
                     </div>
                     <div class="hotels-container">
-                      <a class="button" href="#">Подробнее</a>
-                      <button class="button-blue hotels-button" type="button">В избранное</button>
+                      <a class="product-button" href="#">Подробнее</a>
+                      <button class="hotels-button" type="button">В избранное</button>
                     </div>
                     <div class="hotels-container">
                       <span class="hotels-stars two-stars"></span>
