--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
           <ul class="controls-list">
               <li class="controls-item">
-                <a class="controls-link controls-link-search" href="">
+                <a class="controls-link controls-link-search controls-icon" href="">
                   <span class="visually-hidden">Поиск</span>
                 </a>
               </li>
               <li class="controls-item">
-                <a class="controls-link controls-link-heart" href="">
+                <a class="controls-link controls-link-heart controls-icon" href="">
                   <span class="visually-hidden">Избранное</span>
                 </a>
               </li>
-              <li class="controls-item ">
-                 <a class="button controls-link" href="#">Хочу сюда!</a>
+              <li class="controls-item">
+                 <a class="controls-link button" href="#">Хочу сюда!</a>
               </li>
           </ul>
         </div>
@@ -97,15 +97,15 @@
         </ul>
 
         <ul class="advantages-list secondary-list">
-          <li class="advantages-item advantages-item-house">
+          <li class="advantages-item advantages-item-house advantages-icons">
             <h3 class="advantages-title">Жильё</h3>
             <p class="advatages-description ">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
-          <li class="advantages-item advantages-item-colored advantages-item-food">
+          <li class="advantages-item advantages-item-colored advantages-icon advantages-item-food">
             <h3 class="advantages-title">Еда</h3>
             <p class="advatages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantages-item advantages-item-gift">
+          <li class="advantages-item advantages-item-gift advantages-icon">
             <h3 class="advantages-title">Сувениры</h3>
             <p class="advatages-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
