--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </section>
     </footer>
 
-    <div class="modal-container grid-container">
+    <div class="modal-container modal-container-close">
       <div class="modal modal-search">
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
