Вносит правки по критериям

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <header class="page-header">
     <nav class="navigation">
       <a href="index.html" class="logo">
-        <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона">
+        <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона.">
       </a>
   <div class="nav-container">
     <ul class="navigation-list reset-list">
@@ -71,44 +71,45 @@
             </ul>
               <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
                 <div class="filter-container">
-                  <fieldset class="catalog-filter-group checkbox-group">
-                      <legend class="catalog-filter-title">Инфрастуктура:</legend>
-                      <label class="control-caption">
-                          <input class="control-input visually-hidden reset-input" type=checkbox name="swimming-pool" id="swimming-pool" checked >
-                          <span class="control-mark"></span>
-                          <span class="control-label">Бассейн</span>
-                      </label>
-                      <label class="control-caption">
-                          <input class="control-input visually-hidden reset-input" type="checkbox" name="parking" id="parking" checked>
-                          <span class="control-mark"></span>
-                          <span class="control-label">Парковка</span>
-                      </label>
-                      <label class="control-caption">
-                          <input class="control-input visually-hidden reset-input" type="checkbox" name="wi-fi" id="wi-fi">
-                          <span class="control-mark"></span>
-                          <span class="control-label">Wi-Fi</span>
-                      </label>
-                  </fieldset >
+                  <div class="flex-container">
+                    <fieldset class="catalog-filter-group checkbox-group">
+                        <legend class="catalog-filter-title">Инфраструктура:</legend>
+                        <label class="control-caption">
+                            <input class="control-input visually-hidden reset-input" type=checkbox name="swimming-pool" id="swimming-pool" checked >
+                            <span class="control-mark"></span>
+                            <span class="control-label">Бассейн</span>
+                        </label>
+                        <label class="control-caption">
+                            <input class="control-input visually-hidden reset-input" type="checkbox" name="parking" id="parking" checked>
+                            <span class="control-mark"></span>
+                            <span class="control-label">Парковка</span>
+                        </label>
+                        <label class="control-caption">
+                            <input class="control-input visually-hidden reset-input" type="checkbox" name="wi-fi" id="wi-fi">
+                            <span class="control-mark"></span>
+                            <span class="control-label">Wi-Fi</span>
+                        </label>
+                    </fieldset >
 
-                  <fieldset class="catalog-filter-group radio-group">
-                      <legend class="catalog-filter-title">Тип жилья:</legend>
-                      <label class="control-caption">
-                          <input class="control-input visually-hidden reset-input" type="radio" name="product-group" value="hotel" id="hotel"  checked>
-                          <span class="control-mark"></span>
-                          <span class="control-label">Гостиница</span>
-                      </label>
-                      <label class="control-caption">
-                          <input class="control-input visually-hidden reset-input" type="radio" name="product-group" value="motel" id="motel" >
-                          <span class="control-mark"></span>
-                          <span class="control-label">Мотель</span>
-                      </label>
-                      <label class="control-caption">
-                          <input class="control-input visually-hidden reset-input" type="radio" name="product-group" value="apartments" id="apartments" >
-                          <span class="control-mark"></span>
-                          <span class="control-label">Апартаменты</span>
-                      </label>
-                  </fieldset >
-
+                    <fieldset class="catalog-filter-group radio-group">
+                        <legend class="catalog-filter-title">Тип жилья:</legend>
+                        <label class="control-caption">
+                            <input class="control-input visually-hidden reset-input" type="radio" name="product-group" value="hotel" id="hotel"  checked>
+                            <span class="control-mark"></span>
+                            <span class="control-label">Гостиница</span>
+                        </label>
+                        <label class="control-caption">
+                            <input class="control-input visually-hidden reset-input" type="radio" name="product-group" value="motel" id="motel" >
+                            <span class="control-mark"></span>
+                            <span class="control-label">Мотель</span>
+                        </label>
+                        <label class="control-caption">
+                            <input class="control-input visually-hidden reset-input" type="radio" name="product-group" value="apartments" id="apartments" >
+                            <span class="control-mark"></span>
+                            <span class="control-label">Апартаменты</span>
+                        </label>
+                    </fieldset >
+                  </div>
                   <fieldset class="catalog-filter-group input-range-group">
                       <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                       <div class="filter-wrapper range">
@@ -168,7 +169,7 @@
           </div>
             <ul class="hotels-list reset-list">
                 <li class="hotels-item">
-                    <img class="hotels-item-image" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Ущелье, с красивым звездным небом">
+                    <img class="hotels-item-image" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Ущелье, с красивым звездным небом.">
                     <h3 class="hotels-title reset-title">Amara Resort & Spa</h3>
                     <div class="hotels-wrapper">
                     <div class="hotels-container">
@@ -222,7 +223,7 @@
                   </div>
                 </li>
                 <li class="hotels-item">
-                    <img class="hotels-item-image" src="images/catalog/hotel-4.jpg" width="300" height="212" alt="Плато на фоне темного звездного неба">
+                    <img class="hotels-item-image" src="images/catalog/hotel-4.jpg" width="300" height="212" alt="Плато на фоне темного звездного неба.">
                     <h3 class="hotels-title reset-title">GreenTree Inn</h3>
                     <div class="hotels-wrapper">
                     <div class="hotels-container">
@@ -242,8 +243,8 @@
             </ul>
 
             <ul class="pagination-list reset-list">
-                <li class="pagination-item">
-                  <a class="pagination-link" href="#">1</a>
+                <li class="pagination-item pagination-item-current">
+                  <a class="pagination-link">1</a>
                 </li>
                 <li class="pagination-item">
                   <a class="pagination-link" href="#">2</a>
@@ -260,11 +261,13 @@
                 <li class="pagination-item">
                   <a class="pagination-link" href="#">10</a>
                 </li>
+
+
             </ul>
 
             <section class="subscription catalog">
                 <h2 class="subscription-title black-text reset-title">Подпишитесь на рассылку</h2>
-                <p class="subscription-description black-text reset-paragraph">Только полезная информация и никакого спама, честное бойскаутское!</p>
+                <p class="subscription-description black-text reset-paragraph">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
                 <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
                     <label class="visually-hidden" for="newsletter-email">Email</label>
                     <input class="field input-email reset-input" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
